--- a/square_blue/square_blue.vcxproj
+++ b/square_blue/square_blue.vcxproj
@@ -160,6 +160,9 @@
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_point.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_slash.bmp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
