--- a/square_blue/square_blue.vcxproj.filters
+++ b/square_blue/square_blue.vcxproj.filters
@@ -80,4 +80,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
