--- a/square_blue/square_blue.vcxproj
+++ b/square_blue/square_blue.vcxproj
@@ -141,7 +141,6 @@
     <ResourceCompile Include="Resource.rc" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="..\calc\buttonsbmp\square_blue\bitmap2.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_0.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_1.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_2.bmp" />
@@ -160,6 +159,7 @@
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_plus.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_point.bmp" />
     <Image Include="..\Calc\ButtonsBMP\square_blue\button_slash.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_0.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
