--- a/square_blue/square_blue.vcxproj.filters
+++ b/square_blue/square_blue.vcxproj.filters
@@ -82,5 +82,8 @@
     <Image Include="ButtonsBMP\square_blue\button_0.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="ButtonsBMP\metal_mistral\button_0.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
