--- a/Calc/Calc.vcxproj
+++ b/Calc/Calc.vcxproj
@@ -142,12 +142,34 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\square_blue\resource.h" />
     <ClInclude Include="ColorsAndSkins.h" />
     <ClInclude Include="dimensions.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\square_blue\Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\square_blue\ButtonsBMP\square_blue\button_0.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_1.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_2.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_3.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_4.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_5.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_6.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_7.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_8.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_9.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_aster.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_bsp.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_clr.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_equal.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_minus.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_plus.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_point.bmp" />
+    <Image Include="ButtonsBMP\square_blue\button_slash.bmp" />
+    <Image Include="g12-calculator_97279.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
