--- a/Calc/Calc.vcxproj.filters
+++ b/Calc/Calc.vcxproj.filters
@@ -29,10 +29,72 @@
     <ClInclude Include="ColorsAndSkins.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\square_blue\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="..\square_blue\Resource.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="g12-calculator_97279.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\square_blue\ButtonsBMP\square_blue\button_0.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_4.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_5.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_6.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_7.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_8.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_9.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_point.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_plus.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_minus.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_aster.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_slash.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_bsp.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_clr.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="ButtonsBMP\square_blue\button_equal.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
